[package]
name = "exhume_memory"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
memflow = { git = "https://github.com/forensicxlab/memflow", branch = "main" }
memflow-rawmem = { git = "https://github.com/forensicxlab/memflow-rawmem", branch = "main" }
memflow-win32 = { git = "https://github.com/forensicxlab/memflow-win32", branch = "main" }
memflow-pcileech = { git = "https://github.com/memflow/memflow-pcileech", branch = "main" }

hex = "0.4"
rayon = "1.8"
memchr = "2.7"
indicatif = { version = "0.17", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8"
prettytable = "0.10"
